--- a/conf.d/6061.conf
+++ b/conf.d/6061.conf
@@ -1,10 +1,10 @@
 server {
-    listen       80;
-    listen  [::]:80;
+    listen       6061;
+    listen  [::]:6061;
     server_name  localhost;
     
     # 根路径目录
-    root /usr/share/nginx/html;
+    root /usr/share/nginx/html/6061;
 
     #charset koi8-r;
     #access_log  /var/log/nginx/host.access.log  main;
