--- a/conf.d/6062.conf
+++ b/conf.d/6062.conf
@@ -1,13 +1,26 @@
 server {
-    listen       80;
-    listen  [::]:80;
+    listen       6062;
+    listen  [::]:6062;
     server_name  localhost;
+    
+    # 根路径目录
+    root /usr/share/nginx/html/6062;
 
     #charset koi8-r;
     #access_log  /var/log/nginx/host.access.log  main;
 
+    # 缓存控制
+    location ~ .*.(htm|html)$ {
+        add_header Cache-Control "private, no-store, no-cache, must-revalidate, proxy-revalidate";
+        expires -1;
+    }
+
+    location ~ .*.(gif|jpg|jpeg|png|bmp|ico|js|css|wma|wmv|asf|mp3|mp4|zip|rar|swf|flv)$ {
+        expires 30d;
+    }
+
     location / {
-        root   /usr/share/nginx/html;
+        # root   /usr/share/nginx/html;
         index  index.html index.htm;
     }
 
