--- a/conf.d/6063.conf
+++ b/conf.d/6063.conf
@@ -2,6 +2,14 @@ server {
     listen       6063;
     listen  [::]:6063;
     server_name  localhost;
+
+    gzip on;
+    gzip_buffers 32 4K;
+    gzip_comp_level 6;
+    gzip_min_length 10k;
+    gzip_types application/javascript text/css text/xml text/html application/octet-stream;
+    gzip_disable "MSIE [1-6]\."; #配置禁用gzip条件，支持正则。此处表示ie6及以下不启用gzip（因为ie低版本不支持）
+    gzip_vary on;
     
     #charset koi8-r;
     #access_log  /var/log/nginx/host.access.log  main;
