--- a/conf.d/6061.conf
+++ b/conf.d/6061.conf
@@ -6,7 +6,7 @@ server {
     gzip on;
     gzip_buffers 32 4K;
     gzip_comp_level 6;
-    gzip_min_length 10k;
+    gzip_min_length 10000;
     gzip_types application/javascript text/css text/xml text/html application/octet-stream;
     gzip_disable "MSIE [1-6]\."; #配置禁用gzip条件，支持正则。此处表示ie6及以下不启用gzip（因为ie低版本不支持）
     gzip_vary on;
