--- a/conf.d/6063.conf
+++ b/conf.d/6063.conf
@@ -7,7 +7,7 @@ server {
     gzip_buffers 32 4K;
     gzip_comp_level 6;
     gzip_min_length 10000;
-    gzip_types application/javascript text/css text/xml text/html application/octet-stream;
+    gzip_types text/css text/xml text/plain application/javascript application/x-javascript application/xml application/octet-stream;
     gzip_disable "MSIE [1-6]\."; #配置禁用gzip条件，支持正则。此处表示ie6及以下不启用gzip（因为ie低版本不支持）
     gzip_vary on;
     
