--- a/conf.d/6063.conf
+++ b/conf.d/6063.conf
@@ -15,6 +15,8 @@ server {
     #access_log  /var/log/nginx/host.access.log  main;
 
     location / {
+    	   add_header Access-Control-Allow-Origin *;
+
         root   /usr/share/nginx/html/6063;
         index  index.html index.htm;
 
