--- a/conf.d/6061.conf
+++ b/conf.d/6061.conf
@@ -10,9 +10,9 @@ server {
     gzip_types text/css text/xml text/plain application/javascript application/x-javascript application/xml application/octet-stream;
     gzip_disable "MSIE [1-6]\."; #配置禁用gzip条件，支持正则。此处表示ie6及以下不启用gzip（因为ie低版本不支持）
     gzip_vary on;
-    gzip_static on;    
+    gzip_static on;
 
-    #charset koi8-r;
+    charset utf-8;
     #access_log  /var/log/nginx/host.access.log  main;
 
     location / {
